--- a/08-podconfig.yaml
+++ b/08-podconfig.yaml
@@ -7,14 +7,16 @@ spec:
   containers:
     - name: nginx
       image: nginx
-      env:
-        - name: course
-          valueFrom:
-              configMapKeyRef:
-                name: nginx-configmap
-                key: course
-        - name: duration
-          valueFrom:
-              configMapKeyRef:
-                name: nginx-configmap
-                key: duration
+      envFrom:
+        - configMapRef:
+            name: nginx-configmap
+        # - name: course
+        #   valueFrom:
+        #       configMapKeyRef:
+        #         name: nginx-configmap
+        #         key: course
+        # - name: duration
+        #   valueFrom:
+        #       configMapKeyRef:
+        #         name: nginx-configmap
+        #         key: duration
