--- a/11-service.yaml
+++ b/11-service.yaml
@@ -22,7 +22,7 @@ spec:
     app: nginx
   ports:
     - name: nginx-svc-port
-      protocal: TCP
+      protocol: TCP
       port: 80
       targetport: 80
 
