--- a/14-replicaset.yaml
+++ b/14-replicaset.yaml
@@ -3,8 +3,8 @@ kind: ReplicaSet
 metadata:
     name: nginx-replicaset
     labels:
-      project: exp-replicaset
-      env: dev
+      app: nginx
+      tier: fronend
 spec:
   replicas: 2
   selector:
