--- a/14-replicaset.yaml
+++ b/14-replicaset.yaml
@@ -3,8 +3,8 @@ kind: ReplicaSet
 metadata:
   name: nginx-replicaset
   labels:
-    app: nginx
-    tier: fronend
+    app: nginx1
+    tier: fronend1
 spec:
   replicas: 2
   selector:
