--- a/17-backend.yaml
+++ b/17-backend.yaml
@@ -1,3 +1,10 @@
+apiVersion: v1 
+kind: ConfigMap
+metadata:
+  name: backend
+data:
+  DB_HOST: mysql
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -32,5 +39,5 @@ spec:
     - name: backend-port
       protocol: TCP
       port: 8080
-      targetPort: 3306
+      targetPort: 8080
 
