--- a/16-mysql.yaml
+++ b/16-mysql.yaml
@@ -1,43 +1,52 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata: 
+metadata:
   name: mysql
+  namespace: expense
   labels:
+    app: mysql
+    tier: db
     project: expense
-    env: dev
-    tier: mysql
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
-      app: expense
-      tier: mysql
+      app: mysql
+      tier: db
+      project: expense
   template:
     metadata:
       labels:
-        app: expense
-        tier: mysql
+        app: mysql
+        tier: db
+        project: expense
     spec:
       containers:
-        - name: mysql
-          image: sankarjuvva/mysql:latest
-          envFrom:
-            - configMapRef:
-                name: backend
+      - name: mysql
+        image: joindevops/mysql:v1
+        readinessProbe:
+          tcpSocket:
+            port: 3306
+          initialDelaySeconds: 15
+          periodSeconds: 10
+        livenessProbe:
+          tcpSocket:
+            port: 3306
+          initialDelaySeconds: 15
+          periodSeconds: 10
 ---
-apiVersion: v1 
 kind: Service
+apiVersion: v1
 metadata:
   name: mysql
+  namespace: expense
 spec:
   selector:
+    app: mysql
+    tier: db
     project: expense
-    env: dev
-    tier: mysql
   ports:
-    - name: mysql-svc
-      protocol: TCP 
-      port: 3306
-      targetPort: 3306
-
-  
+  - name: mysql-port
+    protocol: TCP
+    port: 3306 # service port
+    targetPort: 3306 # container port
