--- a/16-mysql.yaml
+++ b/16-mysql.yaml
@@ -23,7 +23,7 @@ spec:
     spec:
       containers:
       - name: mysql
-        image: joindevops/mysql:v1
+        image: sankardevops/mysql:v1
         readinessProbe:
           tcpSocket:
             port: 3306
