--- a/16-mysql.yaml
+++ b/16-mysql.yaml
@@ -10,11 +10,13 @@ spec:
   replicas: 2
   selector:
     matchLabels:
+      project: expense
       env: dev
       tier: mysql
   template:
     metadata:
       labels:
+        project: expense
         env: dev
         tier: mysql
     spec:
