--- a/volumes/04-efsstatic.yaml
+++ b/volumes/04-efsstatic.yaml
@@ -30,6 +30,8 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: efs-static
+  labels: 
+    purpose: staticvol
 spec:
   containers:
   - name: nginx
@@ -41,3 +43,17 @@ spec:
   - name: efs-static
     persistentVolumeClaim:
       claimName: efs-claim
+---
+apiVersion: v1 
+kind: Service
+metadata: 
+  name: efs-statc-pv
+spec:
+  type: LoadBalancer
+  selector: 
+     purpose: staticvol
+  ports:
+    - name: vol-svc
+      protocol: TCP
+      port: 80
+      targetPort: 80
